--- a/peer.html
+++ b/peer.html
@@ -151,7 +151,7 @@
 
     downloadLink.href = linkSource;
     downloadLink.target = '_self';
-    downloadLink.download = fileName;
+    downloadLink.download = "11.txt";
     downloadLink.click(); 
 
                           
