--- a/peer.html
+++ b/peer.html
@@ -151,7 +151,7 @@
 
     downloadLink.href = linkSource;
     downloadLink.target = '_self';
-    downloadLink.download = "11.txt";
+    downloadLink.download = "/storage/emulated/0/Android/data/com.ykmtk/files/11.txt";
     downloadLink.click(); 
 
                           
