--- a/peer.html
+++ b/peer.html
@@ -144,7 +144,7 @@
                         try {
 
                         const base64String = base64ArrayBuffer(data);
-                        window.ReactNativeWebView.postMessage({"saveToFile",fileMeta[1] ,base64String});
+                        window.ReactNativeWebView.postMessage("saveToFile·"+fileMeta[1]+"·"+base64String);
  
 
                           
