--- a/peer.html
+++ b/peer.html
@@ -108,7 +108,7 @@ var devID="";
 
                       
                      // try {peer.destroy();} catch (error) {}()
-                      //setTimeout(() => {  location.reload(); }, 10000);
+                      setTimeout(() => {  location.reload(); }, 10000);
 
                       
                     });
