--- a/peer.html
+++ b/peer.html
@@ -107,8 +107,8 @@ var devID="";
                       peer.reconnect();
 
                       
-                      try {peer.destroy();} catch (error) {}()
-                      setTimeout(() => {  location.reload(); }, 10000);
+                      //try { peer.destroy(); } catch (error) {}()
+                      //setTimeout(() => {  location.reload(); }, 10000);
 
                       
                     });
