--- a/peer.html
+++ b/peer.html
@@ -251,8 +251,7 @@ function base64ArrayBuffer(arrayBuffer) {
       }
 
 
-//window.addEventListener('beforeunload', () => {
-  
+window.addEventListener('beforeunload', () => {
     peer.destroy();
 });
 
