--- a/peer.html
+++ b/peer.html
@@ -251,9 +251,9 @@ function base64ArrayBuffer(arrayBuffer) {
       }
 
 
-window.addEventListener('beforeunload', () => {
-    peer.destroy();
-});
+window.addEventListener('beforeunload', () => {peer.destroy();});
+    
+
 
      
 
